--- a/package.json
+++ b/package.json
@@ -1,30 +1,39 @@
 {
-	"name": "text-delimiter",
-	"version": "0.1.0",
-	"private": true,
-	"homepage": "https://rkbhambri.github.io/text-delimiter/",
-	"dependencies": {
-		"bootstrap": "^4.3.1",
-		"gh-pages": "^2.0.1",
-		"react": "^16.8.5",
-		"react-dom": "^16.8.5",
-		"react-scripts": "2.1.8"
-	},
-	"scripts": {
-		"start": "PORT=3002 react-scripts start",
-		"build": "react-scripts build",
-		"test": "react-scripts test",
-		"predeploy": "npm run build",
-		"deploy": "gh-pages -d build",
-		"eject": "react-scripts eject"
-	},
-	"eslintConfig": {
-		"extends": "react-app"
-	},
-	"browserslist": [
-		">0.2%",
-		"not dead",
-		"not ie <= 11",
-		"not op_mini all"
-	]
+  "name": "maxa-delim",
+  "version": "0.1.0",
+  "private": true,
+  "dependencies": {
+    "@testing-library/jest-dom": "^5.17.0",
+    "@testing-library/react": "^13.4.0",
+    "@testing-library/user-event": "^13.5.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-scripts": "5.0.1",
+    "web-vitals": "^2.1.4",
+    "bootstrap": "^4.3.1"
+  },
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
+  },
+  "eslintConfig": {
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
+  }
 }
